Prevent horizontal scroll on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,11 @@
-html {
+html, body {
     font-family: Poppins, sans-serif !important;
     background: #F9F9F9;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
+    max-width: 100% !important;
+}
+
+body {
+    position: relative;
+    overflow-y: hidden !important;
 }
